# simple-svg

./: .gitignore  CMakeLists.txt  README.md  main_1.0.0.cpp  simple_svg.hpp  simple_svg_1.0.0.hpp
images/: animation_example.html
include/simple_svg/: simple_svg.hpp
include/svg_writer/: svg_writer.hpp
src/: main.cpp
